--- a/assets/sass/partials/_categories.scss
+++ b/assets/sass/partials/_categories.scss
@@ -66,7 +66,7 @@
                 padding: 1rem;
                 
                 @media (width < 440px) {
-        
+                    gap: .75rem;
                     margin-bottom: .75rem;
                 }
         
